test/2/type/label-extraneous.err
test/2/type/label-extraneous.ploy:3:14-23: type error: argument actual field #0 has label `i`; expected field has no label.
  actual type:   (i:Int j:Int)
  expected type: (Int Int)
| main = exit.f(i=0 j=0)
               ~~~~~~~~~
