test/2/type/label-extraneous.ploy
f = fn (Int Int)%Int add.$;

main = exit.f(i=0 j=0)
